--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <style>
     body {
         font-family: Arial, sans-serif;
-        background: linear-gradient(to right, rgba(230, 108, 235, 0.774));
+        background : rgba(230, 108, 235, 0.774);
         display: flex;
         justify-content: center;
         align-items: center;
